Add automatic migrations and seeding to docker-compose setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,12 @@ FROM node:20-alpine
 
 WORKDIR /app
 
+# Install PostgreSQL client for health checks
+RUN apk add --no-cache postgresql-client
+
+# Install Prisma CLI globally for migrations
+RUN npm install -g prisma
+
 # Copy package files
 COPY package*.json ./
 COPY prisma ./prisma/
@@ -12,6 +18,10 @@ RUN npm ci
 # Copy source code
 COPY . .
 
+# Copy entrypoint script
+COPY docker-entrypoint.sh ./
+RUN chmod +x docker-entrypoint.sh
+
 # Generate Prisma Client
 RUN npx prisma generate
 
@@ -21,6 +31,7 @@ RUN npm run build
 # Expose port
 EXPOSE 3000
 
-# Start the application
+# Use entrypoint script
+ENTRYPOINT ["./docker-entrypoint.sh"]
 CMD ["npm", "run", "start:prod"]
 
