Update Codecov action to v5 with token authentication

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,9 +53,10 @@ jobs:
         working-directory: ./backend
         run: npm run test:e2e
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           directory: ./backend/coverage
           flags: unit
           name: codecov-umbrella
