--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# Node modules
+node_modules/
+**/node_modules/
+
+# Build artifacts
+dist/
+**/dist/
+.next/
+web/.next/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Env files
+.env
+.env.*
 
 # Coverage directories
 coverage/
