--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@jest/test-sequencer": "^30.2.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
